# bmad-shell

./: .geminiignore  .gitignore  .pre-commit-config.yaml  .story-cycle-progress  CLAUDE.md  GEMINI.md  README.md  bmad-shell.code-workspace  claude-stream-filter.py  kill-step.sh  pyproject.toml  run-story-cycle.sh  test_retry.txt  tool_test.txt  tool_verification.txt  verify_tools.txt
.gemini/: settings.json
.gemini/commands/: advanced-elicitation.toml  agent-cis-brainstorming-coach.toml  agent-cis-creative-problem-solver.toml  agent-cis-design-thinking-coach.toml  agent-cis-innovation-strategist.toml  agent-cis-presentation-master.toml  agent-cis-storyteller.toml  agent-tea-tea.toml  analyst.toml  architect.toml  brainstorming.toml  check-implementation-readiness.toml  code-review.toml  correct-course.toml  create-architecture.toml  create-epics-and-stories.toml  create-prd.toml  create-product-brief.toml  create-story.toml  create-ux-design.toml  dev-story.toml  dev.toml  document-project.toml  domain-research.toml  edit-prd.toml  editorial-review-prose.toml  help.toml  master.toml  (+32 more)
tests/: conftest.py  test_ci_workflows.py  test_cli.py  test_cli_discovery.py  test_cli_discovery_atdd.py  test_cli_dry_run.py  test_cli_preflight.py  test_cli_provider_validation_atdd.py  test_config_discovery.py  test_config_sections.py  test_dependencies.py  test_emergency_flow.py  test_emergency_flow_atdd.py  test_error_classification.py  test_errors.py  test_exceptions.py  test_git.py  test_gitignore.py  test_layer_packages.py  test_logging.py  test_logs.py  test_logs_atdd.py  test_project_structure.py  test_provider_availability_atdd.py  test_resources.py  test_resume.py  test_runner_atdd.py  test_smoke.py  test_status_atdd.py  test_tooling.py  test_types.py
(+281 files in other folders)
